# mopidy-spotify

./: .copier-answers.yml  .gitignore  .travis.yml  CHANGELOG.rst  CHANGES.rst  MANIFEST.in  README.md  README.rst  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: ci.yml  release.yml
mopidy_spotify/: __init__.py  backend.py  browse.py  container_manager.py  countries.py  distinct.py  ext.conf  images.py  library.py  lookup.py  playback.py  playlist_manager.py  playlists.py  search.py  session_manager.py  translator.py  utils.py  web.py
src/mopidy_spotify/: __init__.py  authenticate.py  backend.py  browse.py  commands.py  distinct.py  ext.conf  images.py  library.py  lookup.py  playlists.py  search.py  translator.py  types.py  utils.py  web.py
tests/: __init__.py  conftest.py  test_authenticate.py  test_backend.py  test_browse.py  test_commands.py  test_distinct.py  test_extension.py  test_images.py  test_library.py  test_lookup.py  test_playback.py  test_playlists.py  test_search.py  test_translator.py  test_utils.py  test_web.py
